test_suite/tests/ui/inject_constructor/unknown_constructor.rs
use dilib::Inject;

#[derive(Inject)]
#[inject(constructor="new(a, b)")]
struct MyStruct {
    a: String,
    b: usize
}

fn main(){}